--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -12,11 +12,27 @@
         font-size: 100px;
         font-weight: 400;
         margin-bottom: 25px;
+
+        @media (max-width: 768px) {
+            font-size: 50px;
+        }
+
+        @media (max-width: 480px) {
+            font-size: 30px;
+        }
     }
 
     p {
         font-size: 25px;
         margin-bottom: 50px;
+
+        @media (max-width: 768px) {
+            font-size: 20px;
+        }
+
+        @media (max-width: 480px) {
+            font-size: 15px;
+        }
     }
 
     .button-container {
@@ -35,6 +51,14 @@
 
         i {
             font-size: 50px;
+            
+            @media (max-width: 768px) {
+                font-size: 30px;
+            }
+
+            @media (max-width: 480px) {
+                font-size: 20px;
+            }
         }
 
         &:hover {
