--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -4,4 +4,27 @@
     align-items: center;
     justify-content: center;
     width: 50%;
+
+    p {
+        font-size: 1.5rem;
+        margin: 1rem 0;
+        text-align: center;
+        text-justify: auto;
+    }
+
+    @media (max-width: 1024px) {
+        width: 70%;
+
+        p {
+            font-size: 1.3rem;
+        }
+    }
+
+    @media (max-width: 768px) {
+        width: 90%;
+
+        p {
+            font-size: 1rem;
+        }
+    }
 }
