--- a/src/components/Experience/experience.scss
+++ b/src/components/Experience/experience.scss
@@ -4,10 +4,6 @@
     flex-direction: column;
     align-items: center;
 
-    h1 {
-        align-self: center;
-    }
-
     .experience-flex {
         display: flex;
         flex-direction: row;
@@ -27,11 +23,17 @@
 
             h2 {
                 margin-bottom: 25px;
+                @media (max-width: 768px) {
+                    font-size: 1.2rem;
+                }
             }
 
             i {
                 font-size: 65px;
                 padding: 15px;
+                @media (max-width: 768px) {
+                    font-size: 40px;
+                }
             }
         }
     }
@@ -42,6 +44,8 @@
 
             .experience-container {
                 flex: 1 0 auto;
+                margin: 5px;
+                padding: 5px;
             }
         }
     }
