--- a/src/components/Projets/projets.scss
+++ b/src/components/Projets/projets.scss
@@ -1,33 +1,97 @@
 .projets {
-    text-align: center;
-    width: 75%;
-
+    
     h1 {
-        margin-bottom: 50px;
+      text-align: center;
+      margin-bottom: 2rem;
+      font-size: 2rem;
+    }
+  
+    .project {
+      display: flex;
+      align-items: center;
+      margin-bottom: 2rem;
+      padding: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+  
+      .project-text {
+        flex: 1;
+        padding: 0 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      
+        h2, p {
+          text-align: center;
+        }
+
+        p {
+            max-width: 50%;
+        }
+      
+        button {
+          background-color: #000;
+          color: #fff;
+          border: none;
+          padding: 0.5rem 5rem;
+          border-radius: 4px;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-top: 1rem;
+      
+          i {
+            font-size: 1.5rem;
+          }
+      
+          &:hover {
+            background-color: #555;
+          }
+        }
+      }
+  
+      img {
+        width: 600px;
+        height: auto;
+        border-radius: 8px;
+        border: 1px solid #ccc;
+      }
     }
 
-    .project {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        margin-bottom: 20px;
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 1.5rem;
+      }
 
-        .project-text {
-            flex: 1;
-            margin-right: 10px;
-        }
+      .project {
+        flex-direction: column;
 
         img {
-            flex: 1;
-            max-width: 35%;
-            height: auto;
-            border: 2px solid black;
-            border-radius: 25px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+          width: 100%;
         }
+
+        .project-text p {
+          max-width: 75%;
+        }
+
+        .project-text button {
+          margin-bottom: 1rem;
+        }
+      }
     }
 
-    .reverse {
-        flex-direction: row-reverse;
+    @media (max-width: 480px) {
+
+      .project {
+
+        .project-text p {
+          max-width: 100%;
+        }
+
+        .project-text button {
+          margin-bottom: 1.5rem;
+        }
+      }
     }
 }
